# monlight

./: .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  llm.txt  looop.sh  plan.md  plan_0.md  progress.txt  prompt.md  specs.md
.github/workflows/: js-sdk.yml  pages.yml  python-client.yml  release-docker.yml  zig-services.yml
browser-relay/: Dockerfile  build.zig  build.zig.zon
browser-relay/src/: browser_errors.zig  browser_metrics.zig  config.zig  cors.zig  cors_test.zig  database.zig  dsn_auth.zig  dsn_auth_test.zig  dsn_keys.zig  forward_test.zig  (+4 more)
clients/python/: AGENTS.md  pyproject.toml
clients/python/monlight/: __init__.py  error_client.py  metrics_client.py
clients/python/monlight/integrations/: __init__.py  fastapi.py
clients/python/monlightstack/: __init__.py  error_client.py  metrics_client.py
clients/python/monlightstack/integrations/: __init__.py  fastapi.py
clients/python/tests/: test_error_client.py  test_metrics_client.py  test_middleware.py  test_scaffolding.py  test_setup_monlight.py
deploy/: backup.sh  docker-compose.monitoring.yml  docker-compose.test.yml  nginx.conf.example  secrets.env.example  smoke-test.sh  upgrade.sh
docs/: _config.yml  api-reference.md  architecture.md  configuration.md  deployment.md  getting-started.md  index.md
error-tracker/: Dockerfile  build.zig  build.zig.zon
log-viewer/: Dockerfile  build.zig  build.zig.zon
metrics-collector/: Dockerfile  build.zig  build.zig.zon
scripts/: build-tailwind.sh  tunnel.sh
shared/: auth.zig  config.zig  rate_limit.zig  sqlite.zig
(+68 files in other folders)
