[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monlightstack"
version = "0.1.0"
description = "Python client for MonlightStack monitoring services (error tracking, metrics collection)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "httpx>=0.25.0",
    "uvicorn>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["monlightstack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
